<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_sheet"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/btn_close_desc"
        android:focusable="true"
        android:padding="12dp"
        android:layout_margin="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/note_img_desc"
        android:src="@drawable/note_img"
        app:layout_constraintBottom_toTopOf="@+id/tv_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/about_app_text"
        android:textAppearance="@style/addUserTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/mentor" />

    <TextView
        android:id="@+id/mentor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mentor"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="normal"
        android:textColor="@color/blue2"
        app:layout_constraintBottom_toTopOf="@+id/tv_created_by" />

    <TextView
        android:id="@+id/tv_created_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="italic"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>