<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".views.SignUpFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="-6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/btn_back_desc"
        android:focusable="true"
        android:padding="6dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_pin_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/iv_pin_code"
        android:padding="6dp"
        android:src="@drawable/ic_pin_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="369dp"
        android:layout_height="231dp"
        android:contentDescription="@string/note_img_desc"
        android:src="@drawable/note_img"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:maxWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tv_add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_pwd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_chb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="-6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_remember_txt"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/chb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/blue2" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/btn_bg"
            android:drawableEnd="@drawable/ic_login"
            android:fontFamily="@font/roboto_bold"
            android:paddingEnd="18dp"
            android:text="@string/enter_btn_txt"
            android:textAllCaps="false"
            android:textColor="@color/blue2"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sign_up_text"
        android:textAppearance="@style/addUserTextStyle"
        app:drawableEndCompat="@drawable/ic_add_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>