<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="512dp"
    tools:context=".views.ConfirmSignUpFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/note_img_desc"
        android:src="@drawable/note_img"
        app:layout_constraintBottom_toTopOf="@+id/tv_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:letterSpacing="0.01"
        android:lineHeight="20sp"
        android:paddingHorizontal="24dp"
        android:text="@string/add_user_done"
        android:textColor="#222"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:letterSpacing="0.01"
        android:lineHeight="20sp"
        android:padding="24dp"
        android:text="@string/do_not_forget_pwd"
        android:textColor="@color/light_red"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_done" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="?attr/actionBarSize"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/roboto_bold"
        android:padding="14dp"
        android:text="@string/start_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/blue2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_warning" />

</androidx.constraintlayout.widget.ConstraintLayout>