<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="6dp"
    android:maxWidth="500dp"
    android:minWidth="340dp"
    android:padding="12dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_coast"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="12dp"
        android:hint="@string/hint_coast"
        android:maxWidth="488dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="18"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:paddingHorizontal="12dp"
        android:text="@string/text_sum"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/til_coast"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:hint="@string/hint_quantity"
        android:maxWidth="488dp"
        app:layout_constraintEnd_toEndOf="@+id/til_coast"
        app:layout_constraintStart_toStartOf="@+id/til_coast"
        app:layout_constraintTop_toBottomOf="@+id/til_coast">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="18"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/dialog_no_btn_selector"
        android:fontFamily="@font/roboto_black"
        android:text="@string/negative_btn_txt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_positive" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/dialog_yes_btn_selector"
        android:fontFamily="@font/roboto_black"
        android:text="@string/positive_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_quantity" />
</androidx.constraintlayout.widget.ConstraintLayout>