<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cancelButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/btn_close_desc"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/til_enter_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_enter_product"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/light_grey"
        android:hint="@string/hint_buy_field"
        android:maxWidth="400dp"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_to_list"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_bg"
        android:drawableEnd="@drawable/ic_lets_go_shop"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="24dp"
        android:text="@string/btn_add_to_list"
        android:textAllCaps="false"
        android:textColor="@color/blue2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/til_enter_product"
        app:layout_constraintStart_toStartOf="@+id/til_enter_product"
        app:layout_constraintTop_toBottomOf="@+id/til_enter_product" />

</androidx.constraintlayout.widget.ConstraintLayout>